# inschooltech

./: .example.env  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
labs/api/: serializers.py  urls.py  views.py
labs/core/: generate_test_data.py
labs/lab/: mixins.py  models.py
labs/lab/migrations/: 0001_initial.py
labs/labs/: settings.py
labs/tests/: test_models.py  test_views.py
