[tool.poetry]
name = "inschooltech"
version = "0.1.0"
description = ""
authors = ["Nikita Kolesnik <118283668+KolesnikNV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
isort = "^5.12.0"
python-dotenv = "^1.0.0"
faker = "^19.6.1"
djoser = "^2.2.0"
psycopg2-binary = "^2.9.7"
coverage = "^7.3.1"
pytest = "^7.4.2"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
